--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -9,21 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@google/genai": "^1.30.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
-    "@react-navigation/bottom-tabs": "^6.5.11",
-    "@supabase/supabase-js": "^2.45.0",
+    "@supabase/supabase-js": "^2.84.0",
     "@tanstack/react-query": "^5.28.0",
     "@tethered/shared": "*",
+    "base64-arraybuffer": "^1.0.2",
+    "date-fns": "^4.1.0",
     "expo": "~50.0.0",
+    "expo-av": "~13.10.6",
+    "expo-clipboard": "^8.0.7",
+    "expo-file-system": "^16.0.9",
     "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-gesture-handler": "~2.14.1",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-gesture-handler": "~2.14.1",
-    "react-native-reanimated": "~3.6.2"
+    "react-native-url-polyfill": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
